# sgui

./: Cargo.toml
examples/: buttons.rs
src/: layout.rs  lib.rs  renderer_crossterm.rs  renderer_sdl2.rs
