[package]
name = "sgui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
crossterm = "0.25.0"
ez_input = { git = "https://github.com/R-ARM/ez_input.git", version = "0.1.0" }
sdl2 = { version = "0.35.2", features = ["unsafe_textures", "ttf"], optional = true }

[features]
sdl2 = ["dep:sdl2"]
